[workspace]
members = [
    "src/rust/lqos_anonymous_stats_server",
    "src/rust/lqos_bus",
    "src/rust/lqos_config",
    "src/rust/lqos_heimdall",
    "src/rust/lqos_map_perf",
    "src/rust/lqos_python",
    "src/rust/lqos_queue_tracker",
    "src/rust/lqos_setup",
    "src/rust/lqos_sys",
    "src/rust/lqos_utils",
    "src/rust/lqosd",
    "src/rust/lqstats",
    "src/rust/lqtop",
    "src/rust/lqusers",
    "src/rust/lts_client",
    "src/rust/uisp",
    "src/rust/xdp_iphash_to_cpu_cmdline",
    "src/rust/xdp_pping"
]

[workspace.dependencies]
anyhow = "1.0"
csv = "1.3"
dashmap = "6.1"
log = "0.4"
serde = "1.0"
serde_cbor = "0.11"
bincode = "1.3"
nix = "0.29"
thiserror = "1.0"
tokio = "1.41"
ip_network = "0.4"
ip_network_table = "0.2"
pyo3 = "0.22"
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
uuid = "1.11"
byteorder = "1.5"
num-traits = "0.2"
zerocopy = "0.8"
miniz_oxide = "0.8"
once_cell = "1.20"
sysinfo = "0.32"
reqwest = "0.12"
colored = "2.1"
default-net = "0.22"
jemallocator = "0.5"
clap = "4.5"
tracing = "0.1"
timerfd = "1.6"
crossbeam-channel = "0.5"
tracing-subscriber = "0.3"